# langchain-notes

./: .gitignore  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
notebooks/: 01-simple.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chainig.ipynb  07-structured-output.ipynb  08-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  12-parallization.ipynb  13-random.ipynb
src/agents/: main.py  orchestrator.py  orchestrator_sample.py  rag.py  react.py  simple-curso.py  simple.py
src/agents/code_review/: agent.py  state.py
src/agents/code_review/nodes/aggregator/: node.py  prompt.py
src/agents/code_review/nodes/maintainability_review/: node.py  prompt.py
src/agents/code_review/nodes/optimizer/: node.py  prompt.py
src/agents/code_review/nodes/security_review/: node.py  prompt.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py
src/agents/support/routes/intent/: route.py
src/agents/support/utils/: utils.py
