[project]
name = "agents-proyect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-google-vertexai>=2.1.2",
    "langchain-openai>=1.0.0a4",
    "langchain[google-genai]>=1.0.0a14",
    "langgraph>=1.0.0a4",
    "langgraph-cli[inmem]>=0.4.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
